# find-duplicate-images

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
image/: find_duplicates.py
tests/: conftest.py  test_image.py  test_version.py
