[tool.poetry]
name = "image"
version = "0.2.0"
description = "A set of tools to manage image files"
authors = ["Don Bruce Fox <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ImageHash = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
find_duplicates = "image.find_duplicates:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
